Update CardsCommand.java